Almost Completed Clock

--- a/Clock/clock.html
+++ b/Clock/clock.html
@@ -4,6 +4,11 @@
         <link rel="stylesheet" href="clock.css">
     </head>
     <body>
-        <div class="clock"></div>
+        <div class="clock">
+            <div id="hour"></div>
+            <div id="min"></div>
+            <div id="sec"></div>
+        </div>
+        <script src="clock.js"></script>
     </body>
 </html>
